# flask-sample-v2

./: .replit  README.md  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: footer.html  home.html  jobitem.html  nav.html
