[tool.poetry]
name = "flask-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pyrebase = "^3.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
